# PicoW-Plant-Moisture-Sensor

./: .clang-tidy  .clangd  .codechecker.json  .codechecker.skip.list  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  MODULE.bazel  README.md  build_and_combine.sh  compile_commands.json  environment.bat  environment.sh  flash.sh  flash_combined.sh  json_maker.cmake  lwip_import.cmake  pico_ads1115_import.cmake  requirements.txt  run_codechecker_and_create_report.sh  sensor.conf  tiny_json.cmake  unittests.cmake
.github/workflows/: build.yml  cmake-single-platform.yml
KiCad/: .gitignore
KiCad/picow_plant_moisture_sensor/: fp-info-cache  fp-lib-table  mcu.kicad_sch  picow_plant_moisture_sensor.d356  picow_plant_moisture_sensor.kicad_pcb  picow_plant_moisture_sensor.kicad_prl  picow_plant_moisture_sensor.kicad_pro  picow_plant_moisture_sensor.kicad_sch  sym-lib-table
KiCad/picow_plant_moisture_sensor/24LC16B-I_SN/: 24LC16B-I_SN.kicad_sym  SOIC127P600X175-8N.kicad_mod
configs/CoreMQTT/: core_mqtt_config.h
configs/CoreMQTT-Agent/: CMakeLists.txt
configs/FreeRTOS-Kernel/: BUILD  FreeRTOSConfig.h  IdleMemory.c  logging_stack.h
configs/lwip/: lwipopts.h
creds/: example_device.cmake
python/: run-clang-tidy.py  upload_new_binary.py
src/: .clang-tidy  BUILD  CMakeLists.txt  main.cpp  plant_moisture_sensor.cpp  plant_moisture_sensor.h
src/hal/: freertos_interface.h  freertos_interface_impl.cpp  freertos_interface_impl.h  pico_interface.h  pico_interface_impl.cpp  pico_interface_impl.h  pin_map.h  task_priorities.h
src/logger/: logger.cpp  logger.h  v_logging_printf.cpp
src/mqtt/: MQTTAgent.cpp  MQTTAgent.h  MQTTAgentObserver.cpp  mqtt_agent.cpp  mqtt_agent.h
src/network/: device_info.h  mqtt_client.cpp  mqtt_client.h  rest_api.cpp  rest_api.h  rest_api_command_handler.cpp  rest_api_command_handler.h  tcp.cpp  tcp.h  tcp_server.c  tcp_server.h  wifi_config.h  wifi_helper.cpp  wifi_helper.h
src/network/test/: CMakeLists.txt  rest_api_command_handler_test.cpp
src/patterns/: BUILD  publisher.h  subscriber.h
src/run_time_stats/: run_time_stats.cpp  run_time_stats.h
src/sensors/: BUILD  ads1115_adc.cpp  ads1115_adc.h  sensor.h  sensor_config.h  sensor_factory.cpp  sensor_factory.h  sensors.cpp  sensors.h  temp_adc.cpp  temp_adc.h
src/tcp_transport/: TCPTransport.cpp  TCPTransport.h
src/utils/: BUILD  config_handler.cpp  config_handler.h  config_handler_impl.cpp  config_handler_impl.h  json_converter.cpp  json_converter.h  json_handler.cpp  json_handler.h  logger.cpp  logger.h  logging.h  low_pass_filter.h
src/utils/button/: BUILD  button.cpp  button.h  button_control.cpp  button_control.h
src/utils/config_handler/: config_handler.h  config_handler_impl.cpp  config_handler_impl.h
src/utils/config_handler/configs/: mqtt_config.h  sensor_config.h  wifi_config.h
src/utils/config_handler/test/: CMakeLists.txt  config_handler_test.cpp
src/utils/led/: led.cpp  led.h  led_control.cpp  led_control.h
src/utils/test/: CMakeLists.txt  config_handler_test.cpp
src/wifi_helper/: WiFiHelper.cpp
test/mocks/: mock_config_handler.h  mock_freertos_interface.h  mock_pico_interface.h  mock_sensor.h  mock_software_download.h
test/stubs/: FreeRTOS.h  linker_definitions.h  linker_definitions_stub.cpp  logging_levels.h  logging_stack.h  semphr.h
